--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Precompiled Headers
 *.gch
 *.pch
+*.pp
 
 # Libraries
 *.lib
@@ -26,7 +27,10 @@
 *.app
 *.i*86
 *.x86_64
-*.hex
+# *.hex
 
 # Debug files
 *.dSYM/
+
+# Build Files
+FlashROM/
