--- a/Firmware/nanoARCApplication/.project
+++ b/Firmware/nanoARCApplication/.project
@@ -67,16 +67,6 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
-			<name>Application/board_lcd.c</name>
-			<type>1</type>
-			<locationURI>PARENT-5-ORG_PROJ_DIR/common/cc26xx/board_lcd.c</locationURI>
-		</link>
-		<link>
-			<name>Application/board_lcd.h</name>
-			<type>1</type>
-			<locationURI>PARENT-5-ORG_PROJ_DIR/common/cc26xx/board_lcd.h</locationURI>
-		</link>
-		<link>
 			<name>Application/nanoARCApplication.c</name>
 			<type>1</type>
 			<locationURI>PROJECT_LOC/Application/nanoARCApplication.c</locationURI>
@@ -95,11 +85,6 @@
 			<name>Application/util.h</name>
 			<type>1</type>
 			<locationURI>PARENT-5-ORG_PROJ_DIR/common/cc26xx/util.h</locationURI>
-		</link>
-		<link>
-			<name>Drivers/LCD</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
 			<name>Drivers/PIN</name>
@@ -202,6 +187,16 @@
 			<locationURI>PARENT-7-ORG_PROJ_DIR/Components/osal/include/osal_snv.h</locationURI>
 		</link>
 		<link>
+			<name>PROFILES/controlservice.c</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/Application/controlservice.c</locationURI>
+		</link>
+		<link>
+			<name>PROFILES/controlservice.h</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/Application/controlservice.h</locationURI>
+		</link>
+		<link>
 			<name>PROFILES/devinfoservice.c</name>
 			<type>1</type>
 			<locationURI>PARENT-5-ORG_PROJ_DIR/Profiles/DevInfo/devinfoservice.c</locationURI>
@@ -240,16 +235,6 @@
 			<name>PROFILES/peripheral.h</name>
 			<type>1</type>
 			<locationURI>PARENT-5-ORG_PROJ_DIR/Profiles/Roles/CC26xx/peripheral.h</locationURI>
-		</link>
-		<link>
-			<name>PROFILES/simpleGATTprofile.c</name>
-			<type>1</type>
-			<locationURI>PARENT-5-ORG_PROJ_DIR/Profiles/SimpleProfile/CC26xx/simpleGATTprofile.c</locationURI>
-		</link>
-		<link>
-			<name>PROFILES/simpleGATTprofile.h</name>
-			<type>1</type>
-			<locationURI>PARENT-5-ORG_PROJ_DIR/Profiles/SimpleProfile/simpleGATTprofile.h</locationURI>
 		</link>
 		<link>
 			<name>PROFILES/simplekeys.c</name>
@@ -295,26 +280,6 @@
 			<name>TOOLS/ccsLinkerDefines.cmd</name>
 			<type>1</type>
 			<locationURI>PARENT-3-ORG_PROJ_DIR/CCS/Config/ccsLinkerDefines.cmd</locationURI>
-		</link>
-		<link>
-			<name>Drivers/LCD/LCDDogm1286.c</name>
-			<type>1</type>
-			<locationURI>TI_RTOS_DRIVERS_BASE/ti/drivers/lcd/LCDDogm1286.c</locationURI>
-		</link>
-		<link>
-			<name>Drivers/LCD/LCDDogm1286.h</name>
-			<type>1</type>
-			<locationURI>TI_RTOS_DRIVERS_BASE/ti/drivers/lcd/LCDDogm1286.h</locationURI>
-		</link>
-		<link>
-			<name>Drivers/LCD/LCDDogm1286_util.c</name>
-			<type>1</type>
-			<locationURI>TI_RTOS_DRIVERS_BASE/ti/drivers/lcd/LCDDogm1286_util.c</locationURI>
-		</link>
-		<link>
-			<name>Drivers/LCD/LCDDogm1286_util.h</name>
-			<type>1</type>
-			<locationURI>TI_RTOS_DRIVERS_BASE/ti/drivers/lcd/LCDDogm1286_util.h</locationURI>
 		</link>
 		<link>
 			<name>Drivers/PIN/PIN.h</name>
